--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -44,6 +44,8 @@
                     flex-direction: column;
                     height: 100%;
                     color: $background-color;
+                    -webkit-text-fill-color: $background-color; 
+	                -webkit-opacity: 1; 
                     font-size: 12px;
                     font-weight: 300;
                     text-align: center;
@@ -59,6 +61,8 @@
                 .link:active{
                     background-color: $background-color;
                     color: $primary-content-color;
+                    -webkit-text-fill-color: $primary-content-color; 
+	                -webkit-opacity: 1; 
                 }
                 .cart {
                     display: flex;
@@ -77,6 +81,8 @@
                     justify-content: space-between;
                     .emptyCartIcon {
                         color: $primary-content-color;
+                        -webkit-text-fill-color: $primary-content-color; 
+	                    -webkit-opacity: 1; 
                         opacity: 0.3;
                         width: 14px;
                         height: auto;
@@ -105,6 +111,8 @@
                 .togglerIcon {
                     display: block;
                     color: $background-color;
+                    -webkit-text-fill-color: $background-color; 
+	                -webkit-opacity: 1; 
                     width: 24px;
                     height: auto ;
                     margin: 0 ;
